--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="The Computer Society Tech Congress (CSTC) is a national event that will be hosted by the IEEE INSAT Computer Society Student Branch Chapter.
+      Our participants will be able to attend workshops and conferences about divers"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>CSTC 2.0 - Registration</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
